//file:noinspection GradlePackageUpdate
plugins {
	id 'fabric-loom' version '0.11-SNAPSHOT'
	id 'maven-publish'
}

repositories {
	maven {
		url 'https://masa.dy.fi/maven'
	}
	mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "carpet:fabric-carpet:${project.carpet_minecraft_version}-${project.carpet_core_version}"

	//discord

	modImplementation "org.javacord:javacord-api:${project.javacord_version}"
	modImplementation "org.javacord:javacord-core:${project.javacord_version}"

	include "org.javacord:javacord-api:${project.javacord_version}"
	include "org.javacord:javacord-core:${project.javacord_version}"

	include "io.vavr:vavr:0.10.1"

	modImplementation "com.vdurmont:emoji-java:5.1.1"
	include "com.vdurmont:emoji-java:5.1.1"


	include "com.squareup.okhttp3:okhttp:3.9.1"
	include "com.squareup.okhttp3:logging-interceptor:3.9.1"
	include "com.fasterxml.jackson.core:jackson-databind:2.9.3"
	include "com.fasterxml.jackson.core:jackson-annotations:2.9.0"
	include "com.fasterxml.jackson.core:jackson-core:2.9.3"
	include "com.neovisionaries:nv-websocket-client:2.6"
	include "com.squareup.okio:okio:1.13.0"
	include "org.json:json:20170516"
	
	//implementation 'org.apache.logging.log4j:log4j-core:2.15.0'
	//include "org.apache.logging.log4j:log4j-core:2.15.0"
	//include "org.apache.logging.log4j:log4j-api:2.15.0"

}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.mod_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 17
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}